# External_dependency_usage_example

./: .gitignore  .gitmodules  LICENSE  README.md
cmake_based_source/: CMakeLists.txt  app_cmake_cmake_source.cpp  app_cmake_no_cmake_source.cpp
external_repo_based_source/: CMakeLists.txt  app_external_cmake_source.cpp  app_external_no_cmake_source.cpp
external_repo_based_source/external_build/: cmake_install.cmake
external_repo_based_source/external_build/dep_1_cmake/: cmake_install.cmake
submodule_based_source/: CMakeLists.txt
